# Flutter_python_c

./: pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
lib/: ffi_bridge.dart  ffi_bridge2.dart  main.dart
src/: a.out  mytest.c  native_add.c  native_add2.c  native_add2.html  native_add2.pyx  setup.py  weather.c
src/doit/: codedescriptor.dmr  defines.txt  doit.c  doit.h  doit2.c  doit_rtw.bat  doit_rtw.mk  doit_types.h  rtwtypes.h  srtuct.h  tmwtypes.h
src/doit/html/: report.mldatx
src/doit/interface/: _coder_doit_api.c  _coder_doit_api.h  _coder_doit_mex.c  _coder_doit_mex.h
